# softmax_fusion_pass

./: CMakeLists.txt  README.md  commands.txt  run_pass.sh
pass/: CMakeLists.txt  SoftmaxFusion.cpp  SoftmaxFusion.h
pass/driver/: SoftmaxOptTool.cpp
src/: fuse_softmax.mlir  naive_softmax.cpp  naive_softmax.mlir  original_naive_softmax.cpp  softmax_driver.cpp  softmax_wrapper.cpp
